# film-profile-api

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  dockerfile  main.py  pyproject.toml
app/server/: app.py
app/server/database/: database.py  shortcuts.py
app/server/models/: movie_model.py  user.py  user_model.py
app/server/routers/: auth.py  movie.py  movies.py
app/server/schemas/: movie_schema.py  user_schema.py  user_schemas.py
app/server/utils/: hasher.py  jwt.py  validators.py
